
2014-02-04 Matt:
	* Creating repository for simple study of shower properties in various mediums