@@ -1,0 +1,13 @@
+
+name := iceblock
+G4TARGET := $(name)
+G4EXLIB := true
+
+ifndef G4WORKDIR
+G4WORKDIR := .
+endif
+
+.PHONY: all
+all: lib bin
+
+include $(G4INSTALL)/config/binmake.gmk
