@@ -1,3 +1,5 @@
 
 2014-02-04 Matt:
 	* Creating repository for simple study of shower properties in various mediums
+	* Adding basic detector construction
+	* Including skeleton of executable
